Markdown correction for plugins page

--- a/plugins/dynamix.plugin.manager/Plugins.page
+++ b/plugins/dynamix.plugin.manager/Plugins.page
@@ -17,14 +17,16 @@ Code="f1e6"
  * all copies or substantial portions of the Software.
  */
 ?>
+
 <?
 // Remove stale /tmp/plugin/*.plg entries
 foreach (glob("/tmp/plugins/*.{plg,txt}", GLOB_NOSORT+GLOB_BRACE) as $entry) if (!file_exists("/var/log/plugins/".basename($entry))) @unlink($entry);
 $check = $notify['version'] ? 0 : 1;
 ?>
 <link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.filetree.css">
-<style>#plugin_tree{width:33%;height:200px;overflow-y:scroll}</style>
-
+<style>
+#plugin_tree{width:33%;height:200px;overflow-y:scroll}
+</style>
 <script src="<?autov('/webGui/javascript/jquery.filetree.js')?>"></script>
 <script>
 <?if ($display['resize']):?>
