--- a/plugins/dynamix/Eth0.page
+++ b/plugins/dynamix/Eth0.page
@@ -399,6 +399,9 @@ $(function() {
   $('#bridge-eth0').dropdownchecklist('disable');
   if (form.DNS_SERVER2.value) $('#dnsserver2').show(); else $('#dnsserver2').hide();
   if (form.DNS_SERVER3.value) $('#dnsserver3').show(); else $('#dnsserver3').hide();
+  if (form.DNS6_SERVER1.value) $('#dns6server1').show(); else $('#dns6server1').hide();
+  if (form.DNS6_SERVER2.value) $('#dns6server2').show(); else $('#dns6server2').hide();
+  if (form.DNS6_SERVER3.value) $('#dns6server3').show(); else $('#dns6server3').hide();
 <?else:?>
   checkDNSSettings(form);
   checkDNSSettings6(form);
@@ -645,6 +648,7 @@ IPv6 privacy extensions:
 > Enable or disable the generation of a random IPv6 interface identifier according to RFC4941. This is similar to the temporary IPv6 address generation on Windows machines.
 
 </div>
+<div id="dns6server1" style="display:none" markdown="1">
 IPv6 DNS server assignment:
 : <select name="DHCP6_KEEPRESOLV" size="1" onchange="checkDNSSettings6(this.form)">
   <?=mk_option($eth0['DHCP6_KEEPRESOLV'], "no", "Automatic");?>
@@ -659,6 +663,7 @@ IPv6 DNS server:
 
 > This is the primary IPv6 DNS server to use. Enter a IPv6 address.
 
+</div>
 <div id="dns6server2" style="display:none" markdown="1">
 IPv6 DNS server 2:
 : <input type="text" name="DNS6_SERVER2" maxlength="39" value="<?=$eth0['DNS6_SERVER2'];?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">
