Added selection of all available OS versions to upgrade or downgrade

--- a/plugins/dynamix.plugin.manager/Update.page
+++ b/plugins/dynamix.plugin.manager/Update.page
@@ -30,7 +30,7 @@ if (file_exists('/boot/previous/changes.txt')) {
   }
 }
 ?>
-<style>input[type=button].not('#checkos'){margin:0}</style>
+<style>input[id$='install'],input[id$='update']{margin:0}</style>
 <script>
 
 function change_branch(source,branch) {
