--- a/plugins/dynamix.plugin.manager/Update.page
+++ b/plugins/dynamix.plugin.manager/Update.page
@@ -15,6 +15,7 @@ Tag="thumbs-up"
  */
 ?>
 <?
+$empty = "<tr><td colspan='6'><div class='spinner'></div></td><tr>";
 $version = $date = 'unknown';
 $bzroot = file_exists('/boot/previous/bzroot');
 $check = $notify['unraidos'] ? 0 : 1;
@@ -30,46 +31,27 @@ if (file_exists('/boot/previous/changes.txt')) {
   }
 }
 ?>
-<style>input[id$='install'],input[id$='update']{margin:0}</style>
+<style>input[value='Install'],input[value='Update'],input[value='Restore']{margin:0}</style>
 <script>
+var original = null;
 
-function change_branch(source,branch) {
-  $('#os_list').html('<tr><td colspan="6"><div class="spinner"></div></td><tr>');
-  $.get('/plugins/dynamix.plugin.manager/include/ShowPlugins.php',{system:true,source:source,branch:branch},function(data) {
-    $('#os_list').html(data);
-  });
-}
-function change_version(current,release,branch) {
-  if ($('#os-install').length) {
-    var status = '#os-install';
-  } else if (release == current) {
-    var status = null;
-    $('#os-status').show();
-    $('#os-upgrade').hide();
-    $('#os-downgrade').hide();
-  } else if (release > current) {
-    var status = '#os-upgrade';
-    $('#os-status').hide();
-    $('#os-upgrade').show();
-    $('#os-downgrade').hide();
+function update_table(branch) {
+  $('#os_list').html("<?=$empty?>");
+  if (original) {
+    if (branch != original) branch = '';
   } else {
-    var status = '#os-downgrade';
-    $('#os-status').hide();
-    $('#os-upgrade').hide();
-    $('#os-downgrade').show();
+    if (branch) original = branch;
   }
-  if (status !== null) {
-    $.get('/plugins/dynamix.plugin.manager/include/ShowPlugins.php',{system:true,release:release,branch:branch},function(data) {
-      var link = data.split('\0');
-      $(status).html($(status).html().replace(link[0],link[1]));
-    });
-  }
+  $.get('/plugins/dynamix.plugin.manager/include/ShowPlugins.php',{system:'true',branch:branch},function(data) {
+    if (data) $('#os_list').html(data);
+    $('#os_table').trigger('update',true);
+  });
 }
 function downgrade() {
  $.get('/plugins/dynamix.plugin.manager/include/Downgrade.php',{version:'<?=$version?>'},function(){refresh();});
 }
 function loadlist(id) {
-  $.get('/plugins/dynamix.plugin.manager/include/ShowPlugins.php',{system:true,audit:id,check:<?=$check?>},function(data) {
+  $.get('/plugins/dynamix.plugin.manager/include/ShowPlugins.php',{system:'true',audit:id,check:<?=$check?>},function(data) {
     var list = $('#os_list');
     if (id) {
       var cmd = id.split(':');
@@ -82,22 +64,14 @@ function loadlist(id) {
     } else {
       list.html(data);
     }
-    var reboot = data.search(/REBOOT REQUIRED|DOWNGRADE/)>=0;
-    if (reboot) {
-      $('#os-status').html('Changed').show();
-      $('#change-branch').prop('disabled',true).append($('<option>',{text:'---',selected:true}));
-      $('#change-version').prop('disabled',true).append($('<option>',{text:'---',selected:true}));
-      $('#os-install').hide();
-      $('#os-upgrade').hide();
-      $('#os-downgrade').hide();
-      $('#os-release').hide();
-      $('i.fa-info-circle').hide();
-    }
+<?if (preg_match("/^\*\*(REBOOT REQUIRED|DOWNGRADE)/",@file_get_contents("$docroot/plugins/unRAIDServer/README.md",false,null,0,20))):?>
+    $('#change_branch').prop('disabled',true);
+<?endif;?>
 <?if ($bzroot):?>
     $('#previous').show();
 <?endif;?>
 <?if ($check):?>
-    $('#checkos').prop('disabled',reboot);
+    $('#checkos').prop('disabled',false);
 <?endif;?>
   });
 }
@@ -109,6 +83,9 @@ $(function() {
 });
 </script>
 <table class='tablesorter plugins shift' id='os_table'>
-<thead><tr><th></th><th>Component</th><th>Author</th><th>Installed</th><th>Available</th><th>Status</th><th>Branch</th></tr></thead>
-<tbody id="os_list"><tr><td colspan="7"><div class="spinner"></div></td><tr></tbody>
+<thead><tr><th></th><th>Component</th><th>Author</th><th>Version</th><th>Status</th><th>Branch</th></tr></thead>
+<tbody id="os_list"><?=$empty?></tbody>
+<?if ($bzroot):?>
+<tbody id="previous" style="display:none"><tr><td><img src="/plugins/unRAIDServer/images/unRAIDServer.png"></td><td><b>unRAID Server OS (previous)</b></td><td>LimeTech</td><td><?=$version?></td><td><input type="button" value="Restore" onclick="downgrade()"></td><td></td></tbody>
+<?endif;?>
 </table>
