--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -219,11 +219,11 @@ label+.content{margin-top:64px}
 div.tabs{position:relative;margin:110px 30px 30px 100px;background-color:#E4E2E4}
 div.tab{float:left;margin-top:23px}
 div.tab input[id^='tab']{display:none}
-div.tab [type=radio]+label:hover{background:#606E7F;color:#B0B0B0;cursor:pointer;border-color:#0072C6}
-div.tab [type=radio]:checked+label{cursor:default;background:#606E7F;color:#B0B0B0}
+div.tab [type=radio]+label:hover{cursor:pointer;border-color:#004E86;opacity:1}
+div.tab [type=radio]:checked+label{cursor:default;background:transparent;color:#606E7F;border-color:#004E86;opacity:1}
 div.tab [type=radio]+label~.content{display:none}
 div.tab [type=radio]:checked+label~.content{display:inline}
-div.tab [type=radio]+label{position:relative;padding:10px 10px;margin-right:2px;border-top-left-radius:12px;border-top-right-radius:12px;border:#004E86 1px solid;border-bottom:none}
+div.tab [type=radio]+label{position:relative;padding:10px 10px;margin-right:2px;border-top-left-radius:12px;border-top-right-radius:12px;background:#606E7F;color:#B0B0B0;border:#8B98A7 1px solid;border-bottom:none;opacity:0.5}
 div.tab [type=radio]+label img{display:none}
 div.Panel{width:25%;height:auto;float:left;margin:0;padding:5px;border-right:#F3F0F4 1px solid;border-bottom:#F3F0F4 1px solid;box-sizing:border-box}
 div.Panel:hover{background-color:#EDEAEF}
