--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -211,11 +211,11 @@ div.content.shift{margin-top:-70px}
 div.tabs{position:relative;margin:24px 0 0 0}
 div.tab{float:left;margin:0 0 12px 0}
 div.tab input[id^="tab"]{display:none}
-div.tab [type=radio]+label:hover{background:#FFFFFF;color:#478406;cursor:pointer}
-div.tab [type=radio]:checked+label{cursor:default;background:-webkit-radial-gradient(#F8F8F8,#E8E8E8);background:linear-gradient(#F8F8F8,#E8E8E8);color:#303030}
+div.tab [type=radio]+label:hover{background:transparent;color:#478406;cursor:pointer;opacity:1}
+div.tab [type=radio]:checked+label{cursor:default;background:transparent;color:#303030;opacity:1}
 div.tab [type=radio]+label~.content{display:none}
 div.tab [type=radio]:checked+label~.content{display:inline}
-div.tab [type=radio]+label{position:relative;font-size:14px;padding:4px 10px;margin-right:2px;border-top-left-radius:5px;border-top-right-radius:5px;border:1px solid #E8E8E8;border-bottom-color:#D8D8D8;background:-webkit-radial-gradient(#D8D8D8,#B8B8B8);background:linear-gradient(#D8D8D8,#B8B8B8)}
+div.tab [type=radio]+label{position:relative;font-size:14px;padding:4px 10px;margin-right:2px;border-top-left-radius:5px;border-top-right-radius:5px;border:1px solid #E8E8E8;border-bottom:none;background:-webkit-radial-gradient(#D8D8D8,#B8B8B8);background:linear-gradient(#D8D8D8,#B8B8B8);opacity:0.6}
 div.tab [type=radio]+label img{padding-right:4px}
 div.Panel{text-align:center;float:left;margin:0 30px 30px 12px;height:80px}
 div.Panel .PanelText{padding-top:10px}
