Added branch type to previous version

--- a/plugins/dynamix.plugin.manager/Update.page
+++ b/plugins/dynamix.plugin.manager/Update.page
@@ -16,7 +16,7 @@ Tag="thumbs-up"
 ?>
 <?
 $empty = "<tr><td colspan='6'><div class='spinner'></div></td><tr>";
-$version = $date = 'unknown';
+$version = $branch = $date = 'unknown';
 $bzroot = file_exists('/boot/previous/bzroot');
 $check = $notify['unraidos'] ? 0 : 1;
 
@@ -29,6 +29,7 @@ if (file_exists('/boot/previous/changes.txt')) {
       break;
     }
   }
+  $branch = strpos($version,'rc')===false ? 'Stable' : 'Next';
 }
 ?>
 <style>input[value='Install'],input[value='Update'],input[value='Restore']{margin:0}</style>
@@ -86,6 +87,6 @@ $(function() {
 <thead><tr><th></th><th>Component</th><th>Author</th><th>Version</th><th>Status</th><th>Branch</th></tr></thead>
 <tbody id="os_list"><?=$empty?></tbody>
 <?if ($bzroot):?>
-<tbody id="previous" style="display:none"><tr><td><img src="/plugins/unRAIDServer/images/unRAIDServer.png"></td><td><b>unRAID Server OS (previous)</b></td><td>LimeTech</td><td><?=$version?></td><td><input type="button" value="Restore" onclick="downgrade()"></td><td></td></tbody>
+<tbody id="previous" style="display:none"><tr><td><img src="/plugins/unRAIDServer/images/unRAIDServer.png"></td><td><b>unRAID Server OS (previous)</b></td><td>LimeTech</td><td><?=$version?></td><td><input type="button" value="Restore" onclick="downgrade()"></td><td><?=$branch?></td></tbody>
 <?endif;?>
 </table>
