--- a/plugins/dynamix/EthX.page
+++ b/plugins/dynamix/EthX.page
@@ -227,6 +227,7 @@ IPv4 address assignment:
 <div class="more-ipv4-ethX-<?=$i?>" style="display:none" markdown="1">
 IPv4 address:
 : <input type="text" name="IPADDR:<?=$i?>" maxlength="15" value="<?=$ethX["IPADDR:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">/ <select name="NETMASK:<?=$i?>" size="1" class="slim">
+  <?=mk_option($ethX["NETMASK:$i"], "255.0.0.0", "8");?>
   <?=mk_option($ethX["NETMASK:$i"], "255.255.0.0", "16");?>
   <?=mk_option($ethX["NETMASK:$i"], "255.255.128.0", "17");?>
   <?=mk_option($ethX["NETMASK:$i"], "255.255.192.0", "18");?>
@@ -341,6 +342,7 @@ IPv4 address assignment:
 <div class="more-ipv4-ethX-<?=$i?>" style="display:none" markdown="1">
 IPv4 address:
 : <input type="text" name="IPADDR:<?=$i?>" maxlength="15" value="<?=$ethX["IPADDR:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">/ <select name="NETMASK:<?=$i?>" size="1" class="slim">
+  <?=mk_option($ethX["NETMASK:$i"], "255.0.0.0", "8");?>
   <?=mk_option($ethX["NETMASK:$i"], "255.255.0.0", "16");?>
   <?=mk_option($ethX["NETMASK:$i"], "255.255.128.0", "17");?>
   <?=mk_option($ethX["NETMASK:$i"], "255.255.192.0", "18");?>
@@ -446,6 +448,7 @@ IPv4 address assignment:
 <div class="more-ipv4-ethX-INDEX" style="display:none" markdown="1">
 IPv4 address:
 : <input type="text" name="IPADDR:INDEX" maxlength="15" value="<?=$ethX["IPADDR:INDEX"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">/ <select name="NETMASK:INDEX" size="1" class="slim">
+  <?=mk_option($ethX["NETMASK:INDEX"], "255.0.0.0", "8");?>
   <?=mk_option($ethX["NETMASK:INDEX"], "255.255.0.0", "16");?>
   <?=mk_option($ethX["NETMASK:INDEX"], "255.255.128.0", "17");?>
   <?=mk_option($ethX["NETMASK:INDEX"], "255.255.192.0", "18");?>
