--- a/plugins/dynamix/Syslinux.page
+++ b/plugins/dynamix/Syslinux.page
@@ -94,7 +94,7 @@ function prepareMenu(form) {
   form.text2.disabled = true;
 }
 function setDefault(form) {
-  var text = [<?foreach ($default as $area) echo json_encode($area).','?>];
+  var text = <?=json_encode($default)?>;
   $(form).find('textarea.menu').each(function(i){
     if (i < text.length) {
       var field = text[i].split('\n');
