--- a/plugins/dynamix/Syslinux.page
+++ b/plugins/dynamix/Syslinux.page
@@ -22,12 +22,10 @@ function strip($area) {
   return preg_replace(["/^|(\n)  /","/\n$/"],["$1",""],$area);
 }
 $file    = '/boot/syslinux/syslinux.cfg';
-$menu    = file_get_contents($file);
-$default = @file_get_contents("$file-") ?: $menu;
-$text    = preg_replace(["/\r\n/","/\r/","/\n$/"],["\n","\n",""],$menu);
+$current = file_get_contents($file);
+$default = @file_get_contents("$file-") ?: $current;
+$text    = preg_replace(["/\r\n/","/\r/","/\n$/"],["\n","\n",""],$current);
 $text2   = preg_replace(["/\r\n/","/\r/","/\n$/"],["\n","\n",""],$default);
-$menu    = array_map('strip',explode('label ',$text));
-$default = array_map('strip',explode('label ',$text2));
 
 $global  = 'Global Configuration';
 $boot    = 'menu default';
@@ -94,7 +92,7 @@ function prepareMenu(form) {
   form.text2.disabled = true;
 }
 function setDefault(form) {
-  var text = <?=json_encode($default)?>;
+  var text = <?=json_encode(array_map('strip',explode('label ',$text2)))?>;
   $(form).find('textarea.menu').each(function(i){
     if (i < text.length) {
       var field = text[i].split('\n');
@@ -210,7 +208,7 @@ Syslinux configuration:
 <div markdown="1" class="advanced">
 Syslinux configuration:
 : <?$i=0;
-  foreach ($menu as $area):
+  foreach (array_map('strip',explode('label ',$text)) as $area):
   $field = explode("\n", $area);
   $title = ($i) ? array_shift($field):$global;
   $start = in_array($boot,$field);
